--- a/OurCanadaPlan/_css/estilo.css
+++ b/OurCanadaPlan/_css/estilo.css
@@ -7,6 +7,9 @@
 
 body{
     background: url('../_imagens/vancouver.jpg');
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 h1 {
     font-family: 'FontLogo';
@@ -25,7 +28,5 @@ div#interface nav#menu img {
     width: 1500px;
     height: 900px;
     margin: 0px;
-    display: flex;
     box-shadow: rgba(0, 0, 0,.7);
-    align-items: center;
 }
